2005-09-05  Elijah Newren  <newren@gmail.com>

	* configure.in: post-release version bump to 2.12.1

2005-09-05  Elijah Newren  <newren@gmail.com>

	* configure.in:
	* README:
	* NEWS:
	2.12.0 release

2005-09-04  Danilo Šegan  <danilo@gnome.org>

	* configure.in: Added Armenian (hy) to ALL_LINGUAS.

2005-09-03  Elijah Newren  <newren@gmail.com>

	* HACKING: Add tips on how to more easily get the ids of windows,
	and how to shorten xprop output.

2005-09-02  Brent Smith  <gnome@nextreality.net>

	* src/place.c: (meta_window_place): Moved the call to
	meta_screen_get_natural_xinerama_list to earlier in
	function so that xineramas_list is allocated before
	find_first_fit is called.  Fixes #315000

2005-08-22  Elijah Newren  <newren@gmail.com>

	* configure.in: post-release version bump to 2.11.5

2005-08-22  Elijah Newren  <newren@gmail.com>

	* NEWS:	2.11.3 release

2005-08-22  Elijah Newren  <newren@gmail.com>

	* configure.in: Patch from Björn Lindqvist to check for the
	appropriate versions of glib and gtk.  Fixes #314116.

2005-08-12  Elijah Newren  <newren@gmail.com>

	* src/place.c (meta_window_place): Avoid obscuring
	centered-on-desktop windows which are denied focus.  Fixes
	#313234.

2005-08-08  Elijah Newren  <newren@gmail.com>

	* configure.in: post-release version bump to 2.11.3

2005-08-08  Elijah Newren  <newren@gmail.com>

	* NEWS:	2.11.2 release

2005-08-08  Elijah Newren  <newren@gmail.com>

	Patch from Brent Smith to fix a duplicate string.  Fixes #309774.

	* src/theme-parser.c (parse_toplevel_element, parse_draw_op_element):
	Change "No \"%s\" attribute on element <%s>" string to "No \"%s\"
	attribute on <%s> element"

2005-08-03  Ray Strode  <rstrode@redhat.com>

	Improve the behavior of keyboard move/resize and edge
	snapping.  Still not perfect, bug 310888.

	* src/effects.c (draw_xor_rect): Make the outside of a
	wireframe rectangle line up with the outside edge of its
	window, instead of centering the wireframe edges on the
	window edges.
